# code-snippets

./: .gitignore  LICENSE  README.md  desktop.ini
.cargo/: config
AI Chat Sessions/: Bard_Boost_Test_Code_Compilation Error.html  Bard_Rust_Code_1.html  Bard_Rust_Code_3.html  Chat with Meta AI.txt  Chatgpt - mediatek wifi driver issue for latest fedora rawhide kernel - 26032026.docx  Chatgpt session supplimented by claude - about assorted topic - creation of html table - 03112025.docx  Claude - Sonnet 4 - Company Analytics - Power Query & Python Options - 17062025.docx  Claude - Sonnet 4 - Pacman & pip differences using one liners in bash - 18072025.docx  Claude - Sonnet 4 - Rust Troubleshooting and Example rdseed inline assembly code in rust - 30082025.docx  Claude - Sonnet 4 - Using perl pcre2 to replace string with piping it in cd command in bash - 14-06-2025.txt  Claude - Sonnet 4 - batch stitching .opus files using bash script in Msys2 - Part 2 - 11062025.docx  Claude - Sonnet 4 - fixing date formats in horizontally stacked data - 26-05-2025.docx  Claude - Sonnet 4 - recording of live stream from youtube using python + ffmpeg - 10-06-2025.docx  Claude - Sonnet 4.5 - laptop to ipad file movement issues - workarounds - 31102025 .docx  Claude Sonnect 4.5 - Extracting Contents From Websites USing Developer Tools - 03112025.docx  Claude Sonnect 4.5 - Using Developer Tools  Java Script Console - Troubleshooting Live Website Issue - 22-11-2025.docx  Claude Sonnet 4 - Advanced Find Using Perl On Msys And Comparison To Grep - 10092025.docx  Claude Sonnet 4 - Fedora Sound Issue pavucontrol, alsamixer - 20072025.odt  Claude Sonnet 4 - Setting Up OneDrive On Fedora.odt  Claude Sonnet 4 - Using yt-dlp to download large PDF file efficiently (msys [Windows] or linux) - 09092025.docx  Claude Sonnet 4 Making Perl pcre2 work for finding files -Msys - 26072025.docx  Claude Sonnet 4 Python pip install multiple packages without dependecies errors - 27072025.docx  Claude Sonnet 4 ripgrep issues in msys 18092025.docx  Claude Sonnet 4 selinux enforcing parameter troubleshooting (Fedora) - 28072025.docx  Claude Sonnet 4.5 - Full Chat Export - With Artifacts - Through Java Script - 18-11-2025.txt  Claude Sonnet 4.5 - General - gcc - clang - visual studio - gaming - linux - windows - 17112025.docx  Claude Sonnet 4.5 - archlinux efibootmgr and brave browser claude attachment removal java script  - 26112025.docx  Claude Sonnet 4.5 - benchmarking gcc-clang-masm-msvc - example - random number - rdseed and rdrand - 28112025.txt  Claude Sonnet 4.5 - building demucs and troubleshooting lameenc on windows - 26012026.docx  Claude Sonnet 4.5 - extracting text from an html page through screenshot sharing - 2302026.docx  Claude Sonnet 4.5 - fedora wifi issues - 04112025.docx  Claude Sonnet 4.5 - imagemagick in msys64 - reducing image size - optimized settings - 08112025.docx  Claude Sonnet 4.5 - java script to copy contents of webspage of claude session with artifacts embedded - 18112025.docx  Claude Sonnet 4.5 - onedrive sync issues and config of rclone on archlinux - 26102025.docx  Claude Sonnet 4.5 - pcre to pcre2 (perl) comparison and testing new features of pcre2 v.10.47 - 25112025.docx  Claude Sonnet 4.5 - powershell profile modification - 03122025.docx  Claude Sonnet 4.5 - powershell profile modification - 1002026.docx  Claude Sonnet 4.5 - python tackling manual packages installation issues rdrand correct versions missing on pypi - 09122025.docx  Claude Sonnet 4.5 - rclone beta installation issues on fedora and archlinux- 02112025.docx  Claude Sonnet 4.5 - reducing image size using ffmpeg and imagemagick in msys or archlinux - 01032026.docx  (+183 more)
Assembly Examples rdseed/: rdrand_asm.asm  rdrand_masm.asm  test-win-masm-msvcrt.asm  test-win-masm-ucrt.asm  test3  test3.asm  util.asm
Attachments/: qrand-original.py
Excel Examples Including  add-in xlwings and connected python - vba - dlls, etc/: 20_Microns.csv  AMFI NAV Download Power Query From Web Page.xlsx  Another example of new excel 365 functions.xlsx  BSE Listed Companies Lowest Price Yearly - 2020 To 2024 - Calender Year Wise.xlsx  CAGR Formula.ods  Chart Example With Statistical Tools.xlsx  Comprehensive Use Of Dynamic Arrays.xlsx  Daybook_230724.csv  Debt equity mix - WACC - Example.xlsx  Depreciation Calculation Example.xlsx  Derivation Annualized Return (Quarterly Compounded).xlsx  Dynamic Array OR + RendomGen-numpy examples.xlsm  EMI Finding Implicit Rate Of Interest.xlsx  Edate with array - error - limitation of excel.xlsx  Eomonth With Array excel limitation.xlsx  Example - Data Extracted From Image.xlsx  Example Data From Web Scaraping.xlsx  Example of Hstack in combination with other functions.xlsx  Excel - MAP+LAMBDA+DATEDIF+TODAY() - Combination Example.xlsx  Excel - SQL - Python (sqlite) Interface.xlsx  Excel 365 New Functions (Sample).xlsx  Excel SORTBY Example - Data Extracted From Bank Website.xlsx  Excel TAKE function compared with Python & R equivalents.docx  ExcelLabs Example Python.xlsx  Finding-duplicates-using-groupby-and-other-functions.xlsx  INR In Words.xlsm  IRR Example.xlsx  Lease example.xlsx  Linear Programming Solver Examples.xlsx  MAKEARRAY-RDSEED-Integration-Example.xlsm  MAP_LAMBDA_With_Complex_Nesting_And_Conditional_Formatting.xlsx  Manual Calculation of IRR in Excel.xlsx  NSE-Scripts-List-12112023.py  NSE-Scripts-List-12112023.xlsm  Newton_Raphson_method.py  PQ-js-example.xlsm  Pandas SQL analogy - using Group By and Aggegate.py  Power Query Cell Colours Modified.xlsx  Power Query webpage data scraping From Multiple Tabs on webpage.xlsx  Prime Number Generation And Testing Examples - Using xlwings addin.xlsm  (+294 more)
rdseed-meson-python/: BUILDING.md  README.docx  README.md  example.py  hwrng.c  meson.build  pyproject.toml
rdseed_intel/: CMakeLists.txt  README.md  example.py  pyproject.toml  rdseed-intel.c  setup.py
rust_codeium/: Cargo.toml
rust_codeium/src/: rust_rand_codeium.rs
rust_dll/: Cargo.toml
rust_dll/src/: rust_rand_dll_bard.rs  rust_rand_dll_copilot.rs  rust_rand_dll_copilot_parallel.rs
(+627 files in other folders)
