[package]
name = "rust_rand_dll_copilot_parallel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.8.1"

[lib]
name = "rust_rand_dll_copilot_parallel"
path = "src/rust_rand_dll_copilot_parallel.rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z' # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort' # Abort on panic
strip = true # Strip symbols from binary
